2000-11-01  Akim Demaille  <akim@epita.fr>

	In M4sugar, move `define', `undefine', and `defn' into the `m4_'
	name space.

	* m4sugar.m4 (m4_define, m4_defn, m4_undefine): New macros.
	(define, defn, undefine): Undefine.
	Adjust all uses.
	* m4sh.m4: Adjust.
	* autoconf.m4: Reenable these builtins.
	* m4sugar.m4 (m4_expansion_stack_dump): Use m4_copy.

2000-11-01  Akim Demaille  <akim@epita.fr>

	GNU M4 1.4 improperly handle the traces of copies of builtins.

	* autoconf.sh (task trace): When tracing `BUILTIN' also trace
	`m4_BUILTIN'.

2000-11-01  Akim Demaille  <akim@epita.fr>

	Autoupdate should not depend upon foreign macros.

	* autoupdate.sh (ac.m4): Use `_au_define', not `define'.
	(input.m4): Use `_au_BUILTIN' not `BUILTIN'.

2000-11-01  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_fatal): Dump the expansion stack.
	* acgeneral.m4 (AC_FATAL): Use m4_fatal.

2000-11-01  Akim Demaille  <akim@epita.fr>

	Move the `defun' handling into M4sugar.

	* m4sugar.m4 (_m4_divert(GROW), _m4_expansion_stack_dump)
	_m4_defun_pro, _m4_defun_epi, m4_defun, $1, m4_defun_once)
	m4_before, _m4_require, m4_require, m4_expand_once, m4_provide)
	m4_provide_ifelse): New macros.
	* acgeneral.m4 (_AC_EXPANSION_STACK_DUMP, _AC_DEFUN_PRO)
	_AC_DEFUN_EPI): Removed.
	(AC_DEFUN, AC_DEFUN_ONCE, _AC_REQUIRE, AC_REQUIRE)
	AC_PROVIDE_IFELSE, AC_FATAL): Reimplement atop M4sugar.

2000-11-01  Raja R Harinath  <harinath@cs.umn.edu>

	* tests/tools.at (autoupdating AC_LINK_FILES): Invoke autoconf
	like in the rest of the tests.

2000-11-01  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: Typo: s/m4__warnings/m4_warnings/.

2000-10-31  Pavel Roskin  <proski@gnu.org>

	* autoupdate.sh: Check that $sed understands the meaning of "\b"
	instead of checking "--version".

2000-10-31  Akim Demaille  <akim@epita.fr>

	Move the handling of classified warnings into M4sugar.

	* m4sugar.m4 (m4_diagnose): Remove.
	(m4_warning): New.
	* acgeneral.m4 (AC_WARNING_IFELSE, _AC_WARNING_IFELSE)